Spacing changes and fixes

--- a/style.css
+++ b/style.css
@@ -49,15 +49,16 @@ h1, h2, h3, h4, h5, h6 {
 	font-family: 'Squada One', 'Garamond', 'Georgia', sans-serif ; 
     font-weight: 400;
 	color: #303030;
-	margin-bottom: 5px;
+	margin-bottom: 20px;
 }
 
 h3, h4 { 
     font-size: 150px;
-    line-height: 39px;
+    line-height: 150%;
 }
 h1 {
 	font-size: 200%;
+    line-height: 200%;
 }
 h3, h4 { 
     margin-top: 20px;
@@ -133,7 +134,7 @@ code, pre {
 	color: #ff4a14;
 }
 
-p {
+p, pre {
 	margin: 0 0 20px;
 }
 
